feat(knowledge): preserve structured knowledge metadata in runtime pipeline